# nextjs-fastapi-postgres-starter

./: compose.yml
backend/: pyproject.toml
backend/src/: constants.py  db.py  main.py  models.py  seed.py
backend/src/schemas/: message.py  thread.py  user.py
frontend/app/: page.tsx  types.ts
frontend/app/components/: ChatArea.tsx  Sidebar.tsx
frontend/app/hooks/: useMessages.ts  useThreads.ts  useUser.ts
