[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2 = "*"
uvicorn = "*"
python-socketio = "^5.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
